--- a/docs/professor/fernanda_da_silva_ferreira.mdx
+++ b/docs/professor/fernanda_da_silva_ferreira.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Tatiane Martinazzo Portz",
+  title: "Fernanda da Silva Ferreira",
   base: "",
   weekClasses: [
     {
@@ -11,7 +11,7 @@ export const data = {
           subject: "Horticultura",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -29,7 +29,7 @@ export const data = {
           subject: "Culturas I",
           size: 3,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -47,7 +47,7 @@ export const data = {
           subject: "Sociologia Rural",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -60,7 +60,7 @@ export const data = {
           subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -82,7 +82,7 @@ export const data = {
           subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -95,7 +95,7 @@ export const data = {
           subject: "Planejamento Agropecuário",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 6-2",
           students: [
@@ -167,7 +167,7 @@ export const data = {
   ]
 }
 
-# Tatiane Martinazzo Portz
+# Fernanda da Silva Ferreira
 
 <div>
   {
