--- a/docs/professor/marcia_aparecida_barbosa.mdx
+++ b/docs/professor/marcia_aparecida_barbosa.mdx
@@ -32,10 +32,6 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Estágio curricular supervisionado em biologia I",
@@ -43,7 +39,7 @@ export const data = {
           teachers: [
             "Marcia Aparecida Barbosa"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Sala 9-2",
           students: [
             "BIO_ESPECIAL_2"
           ],
@@ -56,7 +52,7 @@ export const data = {
           teachers: [
             "Marcia Aparecida Barbosa"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Sala 9-2",
           students: [
             "BIO_ESPECIAL_2"
           ],
@@ -64,6 +60,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
