--- a/docs/sala/bloco_2/sala_12-2.mdx
+++ b/docs/sala/bloco_2/sala_12-2.mdx
@@ -53,7 +53,7 @@ export const data = {
           subject: "Horticultura",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 12-2",
           students: [
