--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -110,7 +110,7 @@ export const data = {
           subject: "Culturas I",
           size: 3,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -167,7 +167,7 @@ export const data = {
           subject: "Sociologia Rural",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -190,10 +190,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão de Produção",
+          subject: "Máquinas Térmicas de Fluxo",
           size: 2,
           teachers: [
-            "Lechan Colares Santos"
+            "Luiz Inácio Chaves"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -247,10 +247,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Máquinas Térmicas de Fluxo",
+          subject: "Gestão de Produção",
           size: 2,
           teachers: [
-            "Luiz Inácio Chaves"
+            "Lechan Colares Santos"
           ],
           classroom: "Sala 13-2",
           students: [
