--- a/docs/sala/bloco_2/sala_8-2.mdx
+++ b/docs/sala/bloco_2/sala_8-2.mdx
@@ -128,7 +128,7 @@ export const data = {
           subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -216,7 +216,7 @@ export const data = {
           subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
