--- a/docs/turma/agr/agr2024.mdx
+++ b/docs/turma/agr/agr2024.mdx
@@ -99,7 +99,7 @@ export const data = {
           subject: "Planejamento Agropecuário",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 6-2",
           students: [
