--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -74,7 +74,7 @@ export const data = {
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "ELE2025"
           ],
