--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -83,7 +83,20 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Desenho Técnico",
+          size: 4,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "ELE2025"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
