--- a/docs/sala/bloco_2/sala_9-2.mdx
+++ b/docs/sala/bloco_2/sala_9-2.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Sociologia I",
+          subject: "História I",
           size: 1,
           teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
+            "Jael dos Santos"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -24,10 +24,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "História I",
+          subject: "Sociologia I",
           size: 1,
           teachers: [
-            "Jael dos Santos"
+            "Karianny Aparecida Gerotto Del Mouro"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -140,6 +140,32 @@ export const data = {
             "IIW2025A"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Estágio curricular supervisionado em biologia I",
+          size: 2,
+          teachers: [
+            "Marcia Aparecida Barbosa"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "BIO_ESPECIAL_2"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Estágio curricular supervisionado em biologia II",
+          size: 2,
+          teachers: [
+            "Marcia Aparecida Barbosa"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "BIO_ESPECIAL_2"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
