--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -84,7 +84,7 @@ export const data = {
           subject: "Culturas I",
           size: 3,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 13-2",
           students: [
@@ -141,7 +141,7 @@ export const data = {
           subject: "Sociologia Rural",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 13-2",
           students: [
