--- a/docs/turma/ago/ago2025.mdx
+++ b/docs/turma/ago/ago2025.mdx
@@ -193,7 +193,7 @@ export const data = {
           subject: "Educação Postural e Segurança no Trabalho",
           size: 1,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -268,7 +268,7 @@ export const data = {
           subject: "Agroecologia e Desenvolvimento Rural Sustentável",
           size: 2,
           teachers: [
-            "Tatiane Martinazzo Portz"
+            "Fernanda da Silva Ferreira"
           ],
           classroom: "Sala 8-2",
           students: [
