--- a/docs/professor/danilo_hungaro_micheletti.mdx
+++ b/docs/professor/danilo_hungaro_micheletti.mdx
@@ -29,12 +29,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Equipamentos elétricos e Sistema elétricos de potência",
-          size: 4,
+          subject: "Projetos Elétricos industriais",
+          size: 2,
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "ELE2024"
           ],
@@ -73,12 +73,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projetos Elétricos industriais",
-          size: 2,
+          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          size: 4,
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: [
             "ELE2024"
           ],
