--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -11,6 +11,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Projeto Integrador III",
           size: 1,
           teachers: [
@@ -22,25 +35,25 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
-        },
-        {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2024A"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
         }
       ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          size: 2,
+          teachers: [
+            "Vagner Simões Santos"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Processos de Fabricação 3",
           size: 2,
@@ -51,19 +64,6 @@ export const data = {
           classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2022"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2024A"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -128,6 +128,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
