--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -9,11 +9,38 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Marketing e Comportamento do Consumidor",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2025"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
         {
           subject: "Orientação de Estágio Supervisionado",
           size: 1,
@@ -31,7 +58,34 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projetos Elétricos industriais",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Marketing e Comportamento do Consumidor",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "TGC2025"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -48,6 +102,19 @@ export const data = {
             "AGO2023"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          size: 4,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
