--- a/docs/sala/bloco_2/sala_11-2.mdx
+++ b/docs/sala/bloco_2/sala_11-2.mdx
@@ -65,7 +65,7 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -78,7 +78,7 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "10:15 - 11:05",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -113,24 +113,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Equipamentos elétricos e Sistema elétricos de potência",
-          size: 4,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
           subject: "Legislação e Ética Profissional",
           size: 2,
           teachers: [
@@ -144,6 +126,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
