--- a/docs/turma/tgc/tgc2025.mdx
+++ b/docs/turma/tgc/tgc2025.mdx
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2025"
           ],
@@ -91,7 +91,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2025"
           ],
