--- a/docs/professor/alex_soares_de_brito.mdx
+++ b/docs/professor/alex_soares_de_brito.mdx
@@ -12,19 +12,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Física II",
-          size: 2,
-          teachers: [
-            "Alex Soares de Brito"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "IIW2024A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Física III",
           size: 2,
           teachers: [
@@ -85,7 +72,21 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Física II",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
