--- a/docs/professor/keyla_christina_almeida_portela.mdx
+++ b/docs/professor/keyla_christina_almeida_portela.mdx
@@ -26,7 +26,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2025"
           ],
@@ -61,7 +61,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Laboratório de Informatica A",
           students: [
             "TGC2025"
           ],
