--- a/docs/sala/bloco_2/sala_16-2.mdx
+++ b/docs/sala/bloco_2/sala_16-2.mdx
@@ -24,6 +24,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Yohana Diel Saheli"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Arte I",
           size: 2,
           teachers: [
@@ -156,6 +169,19 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Física II",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Geografia I",
           size: 1,
           teachers: [
@@ -166,19 +192,6 @@ export const data = {
             "IIW2024A"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Yohana Diel Saheli"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
