--- a/docs/turma/ele/ele2024.mdx
+++ b/docs/turma/ele/ele2024.mdx
@@ -48,30 +48,12 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Equipamentos elétricos e Sistema elétricos de potência",
-          size: 4,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
           subject: "Projetos Elétricos industriais",
           size: 2,
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: [
             "ELE2024"
           ],
@@ -89,6 +71,24 @@ export const data = {
             "ELE2024"
           ],
           time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          size: 4,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
