--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -11,12 +11,12 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador II",
+          subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
-            "Humberto Fioravante Ferro"
+            "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2024A"
           ],
@@ -37,12 +37,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Yohana Diel Saheli"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
@@ -81,12 +81,12 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Física II",
+          subject: "Laboratório de Banco de Dados",
           size: 2,
           teachers: [
-            "Alex Soares de Brito"
+            "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2024A"
           ],
@@ -107,12 +107,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
+          subject: "Projeto Integrador II",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Humberto Fioravante Ferro"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2024A"
           ],
@@ -195,12 +195,12 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Laboratório de Banco de Dados",
+          subject: "Física II",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Alex Soares de Brito"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
@@ -221,12 +221,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
-            "Yohana Diel Saheli"
+            "Douglas Barbosa Sousa"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2024A"
           ],
