--- a/docs/professor/keyla_christina_almeida_portela.mdx
+++ b/docs/professor/keyla_christina_almeida_portela.mdx
@@ -48,7 +48,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 5",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2024"
           ],
