--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -99,6 +99,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Plano de Marketing",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
           subject: "Informática Instrumental",
           size: 2,
           teachers: [
