--- a/docs/turma/tgc/tgc2024.mdx
+++ b/docs/turma/tgc/tgc2024.mdx
@@ -78,7 +78,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 5",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2024"
           ],
