--- a/docs/professor/elenice_josefa_kolancko_setti.mdx
+++ b/docs/professor/elenice_josefa_kolancko_setti.mdx
@@ -10,33 +10,6 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Matemática III",
-          size: 2,
-          teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Matemática II",
@@ -49,7 +22,33 @@ export const data = {
           students: [
             "AGO2024"
           ],
-          time: "07:30 - 08:20",
+          time: "15:05 - 15:55",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Matemática III",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         },
         {
