--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -91,20 +91,6 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Matemática III",
-          size: 2,
-          teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
           subject: "Equipamentos elétricos e Sistema elétricos de potência",
           size: 4,
           teachers: [
@@ -121,7 +107,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática III",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
