--- a/docs/sala/bloco_2/sala_13-2.mdx
+++ b/docs/sala/bloco_2/sala_13-2.mdx
@@ -146,6 +146,20 @@ export const data = {
           color: ""
         },
         {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        },
+        {
           subject: "Máquinas Térmicas de Fluxo",
           size: 2,
           teachers: [
@@ -265,11 +279,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Física II",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Alex Soares de Brito"
           ],
           classroom: "Sala 13-2",
           students: [
