--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -178,10 +178,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia III",
+          subject: "Sanidade Animal",
           size: 2,
           teachers: [
-            "Gabriele Antico Freiria"
+            "Leiliane Cristine de Souza"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -222,13 +222,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática III",
+          subject: "Biologia III",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Mauro César de Souza Siena"
+            "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Sala 12-2",
           students: [
             "AGO2023"
           ],
@@ -267,12 +266,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sanidade Animal",
+          subject: "Matemática III",
           size: 2,
           teachers: [
-            "Leiliane Cristine de Souza"
+            "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "AGO2023"
           ],
