--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -120,12 +120,13 @@ export const data = {
           color: ""
         },
         {
-          subject: "Física II",
+          subject: "Matemática II",
           size: 2,
           teachers: [
-            "Alex Soares de Brito"
+            "Elenice Josefa Kolancko Setti",
+            "Elizangela Mendes Pereira"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Sala 13-2",
           students: [
             "AGO2024"
           ],
@@ -227,11 +228,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Física II",
           size: 2,
           teachers: [
-            "Elenice Josefa Kolancko Setti",
-            "Elizangela Mendes Pereira"
+            "Alex Soares de Brito"
           ],
           classroom: "Sala 13-2",
           students: [
