--- a/docs/professor/alex_soares_de_brito.mdx
+++ b/docs/professor/alex_soares_de_brito.mdx
@@ -23,19 +23,6 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
-        },
-        {
-          subject: "Física II",
-          size: 2,
-          teachers: [
-            "Alex Soares de Brito"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "AGO2024"
-          ],
-          time: "15:05 - 15:55",
-          color: ""
         }
       ]
     },
@@ -91,6 +78,19 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Física II",
+          size: 2,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Física III",
           size: 2,
