--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -81,12 +81,12 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Laboratório de Banco de Dados",
+          subject: "Matemática II",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Elizangela Mendes Pereira"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Sala 16-2",
           students: [
             "IIW2024A"
           ],
@@ -107,10 +107,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto Integrador II",
+          subject: "Laboratório de Banco de Dados",
           size: 2,
           teachers: [
-            "Humberto Fioravante Ferro"
+            "Douglas Barbosa Sousa"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
@@ -120,12 +120,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática II",
+          subject: "Projeto Integrador II",
           size: 2,
           teachers: [
-            "Elizangela Mendes Pereira"
+            "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2024A"
           ],
